--- a/education.html
+++ b/education.html
@@ -3,38 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education</title>
+    <title>Subhaish</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="education.css">
+    
 </head>
 <body>
-    <nav>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a class="active" href="education.html">Education</a>
-            <a href="interstarea.html">Interest Area</a>
-            <a href="about.html">Contact</a>
+    <header>
+        <nav>
+            <h1 class="sub">Subhasish</h1>
+            <div class="topnav">
+                <a href="index.html">Home</a>
+                <a href="education.html"class="active">Education</a>
+                <a href="interstarea.html">Interest Area</a>
+                <a href="about.html">Contact</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="education">
+            <div class="edu s10">
+                <h3>Secondary: 2017</h3>
+                <p>I completed my secondary education at Pichhaboni Bani Niketan High School in 2017.</p>
+                <h4>Percentage : 82.29%</h4>
+            </div>
+            <div class="edu s12">
+                <h3>Higher Secondary: 2017-2019</h3>
+                <p>I completed my higher secondary education at Pichhaboni Bani Niketan High School in 2019.</p>
+                <h4>Percentage : 86.8%</h4>
+            </div>
+            <div class="edu sug">
+                <h3>Undergrad: 2019-2022</h3>
+                <p>I completed my undergrad at Prabhat Kumar College under Vidyasagar University in 2022.</p>
+                <h4>Grade Point : 8.79 out of 10</h4>
+            </div>
+            <div class="edu spg">
+                <h3>Postgrad : 2023-2026</h3>
+                <p>I am currently pursuing my post-graduation in m.sc. tech. eng physics from the National Institute of Technology, Warangal.</p>
+            </div>
         </div>
-    </nav>
-    <div class="education">
-        <h1>Graduation</h1>
-        <h2 class="Edu">B.Sc Physics Hons</h2>
-        <p class="Edu">I am complted my B.Sc Physics(2019-2022) from Prabhat Kumar College,Contai Under Vidyasager University <br></p>
-        <h1>Higher Secondary</h1>
-        <h2 class="Edu">12th Science(Phyiscs,Math,Chemistry,Biology)</h2>
-        <p class="Edu">I am complted my Hirger Secondary (2017-2019) from Pichhabani Bani Niketan High School,Contai West Bengal State Board</p>
-        <h1>Secondary</h1>
-        <p class="Edu">I am complted my Secondary (2017) from Pichhabani Bani Niketan High School,Contai West Bengal State Board</p>
-
-    </div>
-    <div class="skill1">
-        <ol class="s">
-            <h1 class="skill">My Skill</h1>
-            <li class="skill">C++</li>
-            <li class="skill">Html</li>
-            <li class="skill">Css</li>
-            <li class="skill">Python</li>
-        </ol>
-    </div>
+        <div class="extraskill">
+            <h3>Extra Skill</h3>
+            <ol>
+                <li>C++</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Python</li>
+                <li>DSA</li>
+                <li>JAVASCRIPT</li>
+              </ol>
+        </div>
+    </main>
+    <footer>
+        <div class="link">
+            <a class="github" href="https://github.com/subhasish-subhasish"><i class="fa-brands fa-github"></i></a>
+            <a class="youtube" href="https://www.youtube.com/@subhasish-subhasish"><i class="fa-brands fa-youtube" style="color: #ff0000;"></i></a>
+            <a class="linkdin" href="https://www.linkedin.com/in/subhasishsubhasish/"><i class="fa-brands fa-linkedin" style="color: #005af5;"></i></a> 
+            <a class="instagram" href="https://www.instagram.com/subhasish_subhasish/"><i class="fa-brands fa-instagram" style="color: #ff006f;"></i></a>
+            <a class="facebook" href="https://www.facebook.com/subhasishphysics/"><i class="fa-brands fa-facebook"></i></a>
+            <a class="twitter" href="https://twitter.com/SubhasishdasDas/"><i class="fa-brands fa-x-twitter"></i></a>
+            <a class="whatsapp" href="https://wa.me/917029847241"><i class="fa-brands fa-whatsapp" style="color: #25efb2;"></i></a>
+        </div>
+        <div class="fnote">
+            <p>This website is desined and maintained by Subhasish Das.</p>
+        </div>
+    </footer>
 </body>
 </html>
