--- a/index.html
+++ b/index.html
@@ -3,39 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Subhaish</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
 </head>
-<body class="overflow-auto">
-    <div class="flex justify-center justify-items-center first">
-        <div class="fl flex justify-center justify-items-center first">
-            <div class="l1"><img src="1700147708740.jpg" height="30%" width="30%" alt="Self Photo"></div>
-            <div class="box-border l2">
-                <h3>Subhasish Das</h3>
-                <p>M.sc Tech Eng. Physics Student at NITW</p>
+<body>
+    <header>
+        <nav>
+            <h1 class="sub">Subhasish</h1>
+            <div class="topnav">
+                <a href="index.html" class="active">Home</a>
+                <a href="education.html">Education</a>
+                <a href="interstarea.html">Interest Area</a>
+                <a href="about.html">Contact</a>
             </div>
-            <div class="l3">Email Me</div>
-            <div class=" box-border l4 social"><div class="link">
-                <a class="github" href="https://github.com/subhasish-subhasish"><i class="fa-brands fa-github"></i></a>
-                <a class="youtube" href="https://www.youtube.com/@subhasish-subhasish"><i class="fa-brands fa-youtube" style="color: #005eff;"></i></i></a>
-                <a class="linkdin" href="https://www.linkedin.com/in/subhasishsubhasish/"><i class="fa-brands fa-linkedin" style="color: #005af5;"></i></a> 
-                <a class="instagram" href="https://www.instagram.com/subhasish_subhasish/"><i class="fa-brands fa-instagram" style="color: #ff006f;"></i></a>
-                <a class="facebook" href="https://www.facebook.com/subhasishphysics/"><i class="fa-brands fa-facebook"></i></a>
-                <a class="twitter" href="https://twitter.com/SubhasishdasDas/">Twitter</a>
-                <a class="whatsapp" href="https://wa.me/917029847241"><i class="fa-brands fa-whatsapp" style="color: #25efb2;"></i></a>
-            </div></div>
+        </nav>
+    </header>
+    <main>
+        <div class="one">
+            <div class="o1"><p>Hi My Self Subhasish Das, <br>I am doing M.Sc Tech Eng Physics from <br> Natiotanal Institute of Technology, Warangal</p></div>
+            <div class="o2"><img src="IMG_20231222_094939.jpg" alt="Photo"></div>
         </div>
-        <div class="fr">
-            <div class="r1">
-                <h1>About Me</h1>
-                <p>Currently Studying in 1st year M.Sc Tech Engineering Physics in National Institute of Technology , Warangal</p>
-            </div>
-            <div class="r2">
-                <p>Resume</p>
-                <p>Portfolio</p>
-            </div>
-            </div>
+
+    </main>
+    <footer>
+        <div class="link">
+            <a class="github" href="https://github.com/subhasish-subhasish"><i class="fa-brands fa-github"></i></a>
+            <a class="youtube" href="https://www.youtube.com/@subhasish-subhasish"><i class="fa-brands fa-youtube" style="color: #ff0000;"></i></a>
+            <a class="linkdin" href="https://www.linkedin.com/in/subhasishsubhasish/"><i class="fa-brands fa-linkedin" style="color: #005af5;"></i></a> 
+            <a class="instagram" href="https://www.instagram.com/subhasish_subhasish/"><i class="fa-brands fa-instagram" style="color: #ff006f;"></i></a>
+            <a class="facebook" href="https://www.facebook.com/subhasishphysics/"><i class="fa-brands fa-facebook"></i></a>
+            <a class="twitter" href="https://twitter.com/SubhasishdasDas/"><i class="fa-brands fa-x-twitter"></i></a>
+            <a class="whatsapp" href="https://wa.me/917029847241"><i class="fa-brands fa-whatsapp" style="color: #25efb2;"></i></a>
         </div>
+        <div class="fnote">
+            <p>This website is desined and maintained by Subhasish Das.</p>
+        </div>
+    </footer>
 </body>
 </html>
