--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <title>Subhasish</title>
 
 
-  <!--    Font awsaom link   -->
+    <!--    Font awsaom link   -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
 
@@ -58,10 +58,10 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                       <a class="nav-link" href="about.html"> About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                       <a class="nav-link" href="portfolio.html"> Portfolio </a>
                     </li>
                     <li class="nav-item">
@@ -80,56 +80,91 @@
       </div>
     </header>
     <!-- end header section -->
+
   </div>
 
-  <!-- about section -->
+  <!-- portfolio section -->
 
-  <section class="about_section layout_padding">
+  <section class="portfolio_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          About
+          Our portfolio
         </h2>
+        <p>
+          minim veniam, quis nostrud exercitation ullamco laboris nisi
+        </p>
       </div>
-                <div class="education">
-                  <div class="edu s10">
-                      <h3>Secondary: 2017</h3>
-                      <p>I completed my secondary education at Pichhaboni Bani Niketan High School in 2017.</p>
-                      <h4>Percentage : 82.29%</h4>
-                  </div>
-                  <div class="edu s12">
-                      <h3>Higher Secondary: 2017-2019</h3>
-                      <p>I completed my higher secondary education at Pichhaboni Bani Niketan High School in 2019.</p>
-                      <h4>Percentage : 86.8%</h4>
-                  </div>
-                  <div class="edu sug">
-                      <h3>Undergrad: 2019-2022</h3>
-                      <p>I completed my undergrad at Prabhat Kumar College under Vidyasagar University in 2022.</p>
-                      <h4>Grade Point : 8.79 out of 10</h4>
-                  </div>
-                  <div class="edu spg">
-                      <h3>Postgrad : 2023-2026</h3>
-                      <p>I am currently pursuing my post-graduation in m.sc. tech. eng physics from the National Institute of Technology, Warangal.</p>
-                  </div>
+      <div class="portfolio_container layout_padding2">
+        <div class="box-1">
+          <div class="img-box b-1">
+            <img src="images/p-1.jpg" alt="">
+            <div class="btn-box">
+              <a href="" class="btn-1">
+
+              </a>
+            </div>
+          </div>
+          <div class="img-box b-2">
+            <img src="images/p-2.jpg" alt="">
+            <div class="btn-box">
+              <a href="" class="btn-1">
+
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="box-2">
+          <div class="box-2-top">
+            <div class="img-box b-3">
+              <img src="images/p-3.jpg" alt="">
+              <div class="btn-box">
+                <a href="" class="btn-1">
+
+                </a>
               </div>
-              <div class="extraskill">
-                  <h3>Extra Skill</h3>
-                  <ol>
-                      <li>C++</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                      <li>Python</li>
-                      <li>DSA</li>
-                      <li>JAVASCRIPT</li>
-                    </ol>
+            </div>
+          </div>
+          <div class="box-2-top2">
+            <div class="img-box b-4">
+              <img src="images/p-4.jpg" alt="">
+              <div class="btn-box">
+                <a href="" class="btn-1">
+
+                </a>
               </div>
+            </div>
+          </div>
+          <div class="box-2-btm">
+            <div class="img-box b-5">
+              <img src="images/p-5.jpg" alt="">
+              <div class="btn-box">
+                <a href="" class="btn-1">
+
+                </a>
+              </div>
+            </div>
+            <div class="img-box b-6">
+              <img src="images/p-6.jpg" alt="">
+              <div class="btn-box">
+                <a href="" class="btn-1">
+
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="see_btn">
+        <a href="">
+          See More
+        </a>
       </div>
     </div>
 
   </section>
 
   <!-- end about section -->
-
 
   <!-- info section -->
   <section class="info_section ">
@@ -149,6 +184,7 @@
             <a class="facebook" href="https://www.facebook.com/subhasishphysics/"><i class="fa-brands fa-facebook"></i></a>
             <a class="twitter" href="https://twitter.com/SubhasishdasDas/"><i class="fa-brands fa-x-twitter"></i></a>
             <a class="whatsapp" href="https://wa.me/917029847241"><i class="fa-brands fa-whatsapp" style="color: #25efb2;"></i></a>
+            </a>
           </div>
         </div>
       </div>
