--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,6 @@
   <meta name="author" content="" />
 
   <title>Subhasish</title>
-
-
   <!--    Font awsaom link   -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
@@ -58,13 +56,13 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                       <a class="nav-link" href="about.html"> About</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="portfolio.html"> Portfolio </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                       <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                   </ul>
@@ -82,53 +80,55 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
+  <!-- contact section -->
 
-  <section class="about_section layout_padding">
+  <section class="contact_section layout_padding">
+    <div class="bg-img1">
+      <img src="images/bg-img-1.png" alt="">
+    </div>
+    <div class="bg-img2">
+      <img src="images/bg-img-2.png" alt="">
+    </div>
     <div class="container">
       <div class="heading_container">
         <h2>
-          About
+          Contact Us
         </h2>
       </div>
-                <div class="education">
-                  <div class="edu s10">
-                      <h3>Secondary: 2017</h3>
-                      <p>I completed my secondary education at Pichhaboni Bani Niketan High School in 2017.</p>
-                      <h4>Percentage : 82.29%</h4>
+      <div class="">
+        <div class="row">
+          <div class="col-md-8 mx-auto">
+            <form action="">
+              <div class="contact_form-container">
+                <div>
+                  <div>
+                    <input type="text" placeholder="Name">
                   </div>
-                  <div class="edu s12">
-                      <h3>Higher Secondary: 2017-2019</h3>
-                      <p>I completed my higher secondary education at Pichhaboni Bani Niketan High School in 2019.</p>
-                      <h4>Percentage : 86.8%</h4>
+                  <div>
+                    <input type="text" placeholder="Phone Number">
                   </div>
-                  <div class="edu sug">
-                      <h3>Undergrad: 2019-2022</h3>
-                      <p>I completed my undergrad at Prabhat Kumar College under Vidyasagar University in 2022.</p>
-                      <h4>Grade Point : 8.79 out of 10</h4>
+                  <div>
+                    <input type="email" placeholder="Email">
                   </div>
-                  <div class="edu spg">
-                      <h3>Postgrad : 2023-2026</h3>
-                      <p>I am currently pursuing my post-graduation in m.sc. tech. eng physics from the National Institute of Technology, Warangal.</p>
+                  <div class="">
+                    <input type="text" placeholder="Message" class="message_input">
                   </div>
+                  <div class=" d-flex justify-content-center ">
+                    <button type="submit">
+                      Send
+                    </button>
+                  </div>
+                </div>
               </div>
-              <div class="extraskill">
-                  <h3>Extra Skill</h3>
-                  <ol>
-                      <li>C++</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                      <li>Python</li>
-                      <li>DSA</li>
-                      <li>JAVASCRIPT</li>
-                    </ol>
-              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-
   </section>
 
-  <!-- end about section -->
+
+  <!-- end contact section -->
 
 
   <!-- info section -->
