--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <!-- javascript -->
+  <script src="js/script.js"></script>
 </head>
 
 <body class="sub_page">
@@ -83,12 +85,6 @@
   <!-- contact section -->
 
   <section class="contact_section layout_padding">
-    <div class="bg-img1">
-      <img src="images/bg-img-1.png" alt="">
-    </div>
-    <div class="bg-img2">
-      <img src="images/bg-img-2.png" alt="">
-    </div>
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -102,19 +98,19 @@
               <div class="contact_form-container">
                 <div>
                   <div>
-                    <input type="text" placeholder="Name">
+                    <input type="text" id="name" placeholder="Name">
                   </div>
                   <div>
-                    <input type="text" placeholder="Phone Number">
+                    <input type="number" id="number" placeholder="Phone Number">
                   </div>
                   <div>
-                    <input type="email" placeholder="Email">
+                    <input type="email" id="email" placeholder="Email">
                   </div>
-                  <div class="">
-                    <input type="text" placeholder="Message" class="message_input">
+                  <div>
+                    <input type="text" id="message" placeholder="Message" class="message_input">
                   </div>
                   <div class=" d-flex justify-content-center ">
-                    <button type="submit">
+                    <button type="submit" id="verifyButton">
                       Send
                     </button>
                   </div>
