--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Subhasih</title>
+  <title>Subhasish</title>
 
   <!--    Font awsaom link   -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -228,10 +228,10 @@ Natiotanal Institute of Technology, Warangal
     <div class="container">
       <div class="heading_container">
         <h2>
-          Our portfolio
+          My Photographs
         </h2>
         <p>
-          minim veniam, quis nostrud exercitation ullamco laboris nisi
+          photo clicked by Subhasish Das
         </p>
       </div>
       <div class="portfolio_container layout_padding2">
