--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
     <div class="container">
       <p>
         &copy; 2024 All Rights Reserved By
-        <a href="index.html">Subhaish Das</a>
+        <a href="index.html">Subhasish Das</a>
       </p>
     </div>
   </section>
