--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ Natiotanal Institute of Technology, Warangal
                       It is a long established fact that a reader will be distracted by the readable content
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <a href="" class="btn.-1">
                         About Us
                       </a>
-                      <a href="" class="btn-2">
+                      <a href="" class="btn.-2">
                         Get A Quote
                       </a>
                     </div>
@@ -530,7 +530,7 @@ Natiotanal Institute of Technology, Warangal
     <div class="container">
       <p>
         &copy; 2024 All Rights Reserved By
-        <a href="index.html">Subhaish Das</a>
+        <a href="index.html">Subhasish Das</a>
       </p>
     </div>
   </section>
